--- a/moulem.css
+++ b/moulem.css
@@ -47,12 +47,15 @@ html,body{height: 100%}
 #logoRight{width:139px;height:56px;background-image:url(images/logo.png);background-repeat: no-repeat;float:right;top:0;margin-top: 23px;}
 
 #searchBox{overflow: hidden;width:1000px;height: 50px;}
-#search{width:908px;height: 46px;border:2px solid #15120e;border-right:0 none;float:left;color:#afafaf;
+#search{width:908px;height: 46px;border: 1px solid #8e8e8e;border-right:0 none;float:left;color:#afafaf;
     font-size: 16px;padding-left:0px;color:#15120e;border-left: 0;}
 #search:hover{color:#15120e}
-#searchBtn{width:50px;height:50px;background-color: #267fef;border:2px solid #15120e;border-top-right-radius:15px;border-bottom-right-radius:15px;float:left;
+#searchBtn{    width: 50px;
+    height: 48px;
+    background-color: #267fef;
+    border: 1px solid #267fef;border-top-right-radius:15px;border-bottom-right-radius:15px;float:left;
     background-image: url(images/searchBtn.png);background-position:12px 12px;background-repeat: no-repeat;cursor:pointer;}
-.searchChoice{width:40px;height:46px;background-color:white;border:2px solid #15120e;border-right: 0;border-top-left-radius:15px;border-bottom-left-radius:15px;float:left;
+.searchChoice{width:40px;height:46px;background-color:white;    border: 1px solid #8e8e8e;border-right: 0;border-top-left-radius:15px;border-bottom-left-radius:15px;float:left;
     background-position:12px 12px;background-repeat: no-repeat;position: relative;}
 .sChoiceBtn{width: 20px;height: 20px;margin:13px auto 0 auto;cursor:pointer;background-image:url(images/searchChoice/scbaidugray.png);background-repeat: no-repeat;}
 .scBigBox{display:none;overflow: hidden;width:auto;height:auto;background-color: white;position: absolute;top:36px;border:solid 1px #cccccc;border-radius: 10px;z-index: 41;}
