优化UI，增加新的实用网站。

--- a/moulem.css
+++ b/moulem.css
@@ -84,10 +84,10 @@ html,body{height: 100%}
 /*滑动页面*/
 
 
-#hSiteNav{width:540px;margin:25px auto 15px auto;overflow: hidden;}
+#hSiteNav{width:640px;margin:25px auto 15px auto;overflow: hidden;}
 .hNav{float: left;width:60px;height:34px;text-align: center;color: #919191;font-size: 16px;cursor:pointer;line-height:30px;}
-.hNav:hover{color:#15120e;background-position: 0 28px;background-repeat: no-repeat;}
-.currentHNav{color:#15120e;background-image: url(images/hNavGrayLine.png);background-position: 0 28px;background-repeat: no-repeat;}
+.hNav:hover{color:#0071ff;background-position: 0 28px;background-repeat: no-repeat;}
+.currentHNav{color:#0071ff;background-image: url(images/hNavGrayLine.png);background-position: 0 28px;background-repeat: no-repeat;}
 .hSiteBigBox{width:1200px;position:relative;}
 
 .hSiteBox{width:1200px;position: absolute;}
@@ -101,7 +101,7 @@ html,body{height: 100%}
 .hSiteImgNeets{background-image: url(images/hSiteImgNeets.png);}
 
 .hSiteName{font-size: 16px;color:#15120e;float: left;display: block;width: 101px;height: 20px;margin: 15px 0px 15px 0px;line-height:20px}
-.hGouwu,.hZixun,.hShejiao,.hYingyin,.hShenghuo,.hGongju,.hItsite,.hQuzhan,.hMoulem{display: none;}
+.hZhengfa,.hQuzhan,.hTuku,.hXuexi,.hShenghuo,.hGongju,.hZhanzhang,.hSoso,.hBangong,.hMoulem{display: none;}
 .promptBtn{width: 20px;height: 20px;background-image:url(images/searchChoice/prompt.png);position: absolute;top:15px;right:60px;cursor: pointer;}
 .promptText{font-size:13px;color: #545454;display:none;overflow: hidden;width:auto;height:auto;background-color: white;position: absolute;top:36px;right:-45px;border:solid 1px #cccccc;border-radius: 10px;z-index: 41;padding:10px;}
 
