--- a/moulem.css
+++ b/moulem.css
@@ -96,9 +96,9 @@ html,body{height: 100%}
 
 
 #hSiteNav{width:640px;margin:25px auto 15px auto;overflow: hidden;}
-.hNav{float: left;width:60px;height:34px;text-align: center;color: #919191;font-size: 16px;cursor:pointer;line-height:30px;}
+.hNav{float: left;width:60px;height:34px;text-align: center;color: #919191;font-size: 16px;cursor:pointer;line-height:30px;font-family: HYYiSongW;}
 .hNav:hover{color:#0071ff;background-position: 0 28px;background-repeat: no-repeat;}
-.currentHNav{color:#0071ff;background-image: url(images/hNavGrayLine.png);background-position: 0 28px;background-repeat: no-repeat;}
+.currentHNav{color:#0071ff;background-image: url(images/hNavGrayLine.png);background-position: 0 28px;background-repeat: no-repeat;font-family: HYYiSongW;}
 .hSiteBigBox{width:1200px;position:relative;}
 
 .hSiteBox{width:1200px;position: absolute;}
@@ -111,7 +111,7 @@ html,body{height: 100%}
 .hSiteImg3{background-image: url(images/hSiteImg3.png);}
 .hSiteImgNeets{background-image: url(images/hSiteImgNeets.png);}
 
-.hSiteName{font-family: HYYiSongW;font-size: 16px;color:#15120e;float: left;display: block;width: 101px;height: 20px;margin: 15px 0px 15px 0px;line-height:20px}
+.hSiteName{font-family: HYYiSongW;font-size: 16px;color:#545454;float: left;display: block;width: 101px;height: 20px;margin: 15px 0px 15px 0px;line-height:20px}
 .hZhengfa,.hQuzhan,.hTuku,.hXuexi,.hShenghuo,.hGongju,.hZhanzhang,.hSoso,.hBangong,.hMoulem{display: none;}
 .promptBtn{width: 20px;height: 20px;background-image:url(images/searchChoice/prompt.png);position: absolute;top:15px;right:60px;cursor: pointer;}
 .promptText{font-size:13px;color: #545454;display:none;overflow: hidden;width:auto;height:auto;background-color: white;position: absolute;top:36px;right:-45px;border:solid 1px #cccccc;border-radius: 10px;z-index: 41;padding:10px;}
@@ -262,6 +262,9 @@ border-bottom:dashed 1px #cccccc;
     margin-left: -250px;
     letter-spacing: 2px;
     color: #afafaf;
+ }
+ .yiyan p {
+     font-family: HYYiSongW;
  }
 .tianqi {
     width: 168px;
