--- a/moulem.css
+++ b/moulem.css
@@ -31,7 +31,7 @@ display:none;
     margin: 15px 10px 10px 10px; 
 }
 #divimg {
-background-image: url(images/logo.svg);
+background-image: url(images/logo1.svg);
 background-repeat: no-repeat;
 width: 278px;
 height: 112px; 
